# pluto

./: README.md  angular.json  package-lock.json  package.json
src/: custom-theme.scss  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: create_document.rs  main.rs  write_document.rs
src-tauri/src/cmd_handler/: mod.rs  ts_cmds.rs
src-tauri/src/doc_manager/: create_document.rs  delete_document.rs  get_documents.rs  mod.rs  write_documents.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/core/pipe/: markdown.pipe.ts
src/app/core/service/: doc.service.ts
src/app/features/note-file/: note-file.component.css  note-file.component.html  note-file.component.ts
src/app/features/sidebar/: sidebar.component.html  sidebar.component.ts
src/app/note-file/: note-file.component.css  note-file.component.html  note-file.component.ts
src/app/service/: doc.service.ts
src/app/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.ts
src/types/: documents.ts
